// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationForm It doesn't allow the user to submit if the URL is invalid 1`] = `
<body>
  <div>
    <form
      class="css-xs0vux"
      data-testid="plugin-configuration-form"
    >
      <div
        class="info-block"
      >
        <p>
          1. Launch the OnCall backend
        </p>
        <span
          class="root text text--secondary text--medium"
        >
          Run hobby, dev or production backend. See
           
          <a
            href="https://github.com/grafana/oncall#getting-started"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="root text text--link text--medium"
            >
              here
            </span>
          </a>
           
          on how to get started.
        </span>
      </div>
      <div
        class="info-block"
      >
        <p>
          2. Let us know the base URL of your OnCall API
        </p>
        <span
          class="root text text--secondary text--medium"
        >
          The OnCall backend must be reachable from your Grafana installation. Some examples are:
          <br />
          - http://host.docker.internal:8080
          <br />
          - http://localhost:8080
        </span>
      </div>
      <div
        class="css-8e5b3"
      >
        <div
          class="css-jt4xma-Label"
        >
          <label>
            <div
              class="css-xhqy0o"
            >
              OnCall backend URL
            </div>
          </label>
        </div>
        <div>
          <div
            class="css-1wz1ggz-input-wrapper"
            data-testid="input-wrapper"
          >
            <div
              class="css-1w5c5dq-input-inputWrapper"
            >
              <input
                class="css-12lx392-input-input"
                data-testid="onCallApiUrl"
                name="onCallApiUrl"
              />
            </div>
          </div>
          <div
            class="css-1gd2lua"
          >
            <div
              class="css-mw0th3"
              role="alert"
            >
              <div
                class="css-wf08df-Icon"
              >
                <svg
                  class="css-1ah41zt"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12,16a1,1,0,1,0,1,1A1,1,0,0,0,12,16Zm10.67,1.47-8.05-14a3,3,0,0,0-5.24,0l-8,14A3,3,0,0,0,3.94,22H20.06a3,3,0,0,0,2.61-4.53Zm-1.73,2a1,1,0,0,1-.88.51H3.94a1,1,0,0,1-.88-.51,1,1,0,0,1,0-1l8-14a1,1,0,0,1,1.78,0l8.05,14A1,1,0,0,1,20.94,19.49ZM12,8a1,1,0,0,0-1,1v4a1,1,0,0,0,2,0V9A1,1,0,0,0,12,8Z"
                  />
                </svg>
              </div>
              Must be a valid URL
            </div>
          </div>
        </div>
      </div>
      <button
        class="css-z53gi5-button"
        disabled=""
        type="submit"
      >
        <span
          class="css-1mhnkuh"
        >
          Connect
        </span>
      </button>
    </form>
  </div>
</body>
`;

exports[`ConfigurationForm It shows an error message if the self hosted plugin API call fails 1`] = `
<body>
  <div>
    <form
      class="css-xs0vux"
      data-testid="plugin-configuration-form"
    >
      <div
        class="info-block"
      >
        <p>
          1. Launch the OnCall backend
        </p>
        <span
          class="root text text--secondary text--medium"
        >
          Run hobby, dev or production backend. See
           
          <a
            href="https://github.com/grafana/oncall#getting-started"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="root text text--link text--medium"
            >
              here
            </span>
          </a>
           
          on how to get started.
        </span>
      </div>
      <div
        class="info-block"
      >
        <p>
          2. Let us know the base URL of your OnCall API
        </p>
        <span
          class="root text text--secondary text--medium"
        >
          The OnCall backend must be reachable from your Grafana installation. Some examples are:
          <br />
          - http://host.docker.internal:8080
          <br />
          - http://localhost:8080
        </span>
      </div>
      <div
        class="css-8e5b3"
      >
        <div
          class="css-jt4xma-Label"
        >
          <label>
            <div
              class="css-xhqy0o"
            >
              OnCall backend URL
            </div>
          </label>
        </div>
        <div>
          <div
            class="css-xcstkt-input-wrapper"
            data-testid="input-wrapper"
          >
            <div
              class="css-1w5c5dq-input-inputWrapper"
            >
              <input
                class="css-1mlczho-input-input"
                data-testid="onCallApiUrl"
                name="onCallApiUrl"
              />
            </div>
          </div>
        </div>
      </div>
      <pre>
        <span
          class="root text text--link text--medium"
        >
          ohhh nooo there was an error from the OnCall API
        </span>
      </pre>
      <div
        class="root root--withBackGround info-block"
      >
        <span
          class="root text text--secondary text--medium"
        >
          Need help?
          <br />
          - Reach out to the OnCall team in the
           
          <a
            href="https://grafana.slack.com/archives/C02LSUUSE2G"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="root text text--link text--medium"
            >
              #grafana-oncall
            </span>
          </a>
           
          community Slack channel
          <br />
          - Ask questions on our GitHub Discussions page
           
          <a
            href="https://github.com/grafana/oncall/discussions/categories/q-a"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="root text text--link text--medium"
            >
              here
            </span>
          </a>
           
          <br />
          - Or file bugs on our GitHub Issues page
           
          <a
            href="https://github.com/grafana/oncall/issues"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="root text text--link text--medium"
            >
              here
            </span>
          </a>
        </span>
      </div>
      <button
        class="css-z53gi5-button"
        type="submit"
      >
        <span
          class="css-1mhnkuh"
        >
          Connect
        </span>
      </button>
    </form>
  </div>
</body>
`;
